syntax="proto3";

package greet;

option go_package="github.com/Shashwat5522/go_gRPC/greet/proto";



message GreetRequest{
    string first_name=1;
}

message GreetResponse{
    string result=1;
}

message SumRequest{
    int32 num1=1;
    int32 num2=2;
}

message SumResponse{
    int32 sum=1;
}

service GreetService{
    rpc Greet(GreetRequest) returns (GreetResponse);
    rpc Sum(SumRequest) returns (SumResponse);
    rpc GreetManyTimes(GreetRequest) returns(stream GreetResponse);
    rpc LongGreet(stream GreetRequest) returns(GreetResponse);
    rpc BidirectionalGreet(stream GreetRequest)returns(stream GreetResponse);

}

